--- a/css/styles.css
+++ b/css/styles.css
@@ -226,10 +226,9 @@ align-items: center;
 
 .team-section .item {
     text-align: center;
-    /* border: 1px solid transparent; 
-    border-radius: 5px;
-    box-shadow: #757575; */
-
+    background: var(--white-text);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-section .team-name {
