--- a/css/styles.css
+++ b/css/styles.css
@@ -318,13 +318,14 @@ align-items: center;
     background-color: var(--grey-bcg);
     border: 1px solid transparent;
     border-radius: 4px;
-    padding: 0px 22px;
+    padding: 6px 22px;
 }
 
 .portfolio .button:hover,
 .portfolio .button:focus {
     color: var(--white-text);
     background-color: var(--blue);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio .list-item {
@@ -344,6 +345,11 @@ align-items: center;
 
 .portfolio .list-item .item:nth-last-child(-n + 3) {
     margin-bottom: 0px;
+}
+
+.portfolio .list-item .item:hover,
+.portfolio .list-item .item:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .content {
